<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_group_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FF40435E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/title_view_group_1"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_group_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#FF1A1E32"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/title_view_group_2"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_group_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#FF6A75BF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/title_view_group_3"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="rg_screenshot,rg_watermark" />

    <RadioGroup
        android:id="@+id/rg_screenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_view_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_view_root"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_view_group_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/title_view_group_1"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_view_group_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_view_group_2"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_view_group_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_view_group_3"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_screenshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_screenshot"
        app:layout_constraintStart_toStartOf="@+id/rg_screenshot"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <RadioGroup
        android:id="@+id/rg_watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/rg_screenshot"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_watermark_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/content_watermark_left"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/rb_watermark_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_watermark_right"
            android:textColor="@android:color/white" />

    </RadioGroup>

    <EditText
        android:id="@+id/edt_watermark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/content_watermark_add"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/rg_watermark"
        app:layout_constraintStart_toStartOf="@+id/rg_watermark"
        app:layout_constraintTop_toBottomOf="@+id/rg_watermark" />

    <Button
        android:id="@+id/btn_watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_watermark_add"
        app:layout_constraintStart_toStartOf="@+id/rg_watermark"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <Button
        android:id="@+id/btn_puzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_puzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>